// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`AlbumCard > should render listened album and match snapshot 1`] = `
<button
  class="flex flex-col items-start text-left transition-opacity hover:opacity-80"
  type="button"
>
  <div
    class="relative mb-4 w-full overflow-hidden bg-muted"
  >
    <div
      class="aspect-square"
    >
      <img
        alt="A Love Supreme"
        class="h-full w-full object-cover"
        src="https://example.com/cover.jpg"
      />
    </div>
    <span
      class="absolute bottom-1 right-1 flex size-5 items-center justify-center rounded-full bg-tertiary/20 text-[10px] text-tertiary"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-check size-3"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M20 6 9 17l-5-5"
        />
      </svg>
    </span>
  </div>
  <h3
    class="font-heading italic text-[18px] leading-tight font-semibold text-on-surface"
  >
    A Love Supreme
  </h3>
  <p
    class="font-sans text-xs font-normal uppercase tracking-widest text-on-surface-variant"
  >
    John Coltrane
  </p>
</button>
`;

exports[`AlbumCard > should render with year and match snapshot 1`] = `
<button
  class="flex flex-col items-start text-left transition-opacity hover:opacity-80"
  type="button"
>
  <div
    class="relative mb-4 w-full overflow-hidden bg-muted"
  >
    <div
      class="aspect-square"
    >
      <img
        alt="A Love Supreme"
        class="h-full w-full object-cover"
        src="https://example.com/cover.jpg"
      />
    </div>
  </div>
  <h3
    class="font-heading italic text-[18px] leading-tight font-semibold text-on-surface"
  >
    A Love Supreme
  </h3>
  <p
    class="font-sans text-xs font-normal uppercase tracking-widest text-on-surface-variant"
  >
    John Coltrane
  </p>
  <p
    class="font-sans text-[10px] font-normal text-on-surface-variant"
  >
    1965
  </p>
</button>
`;
